2004-12-31 12:08  Albrecht Dreß <albrecht.dress@arcor.de>

	* libbalsa/body.h, libbalsa/files.c, libbalsa/files.h,
	libbalsa/send.c, src/balsa-message.c, src/print.c,
	src/sendmsg-window.c, src/pixmaps/info_lock.xpm,
	src/pixmaps/info_lock_bad.xpm, src/pixmaps/info_lock_encr.xpm,
	src/pixmaps/info_lock_good.xpm, src/pixmaps/info_lock_sigtrust.xpm:
	new attachment handling code.

2004-12-30 17:04  PeterB

	* libbalsa/: mailbox.c, mailbox.h, mailbox_local.c: reduce the
	amount of tree modification when updating threading.
	* libbalsa/send.c: convert file name to utf-8 for GMime.

2004-12-29 11:49  PeterB

	* src/main-window.c: use BALSA_PIXMAP_CLOSE_MBOX instead of
	GTK_STOCK_CLOSE for Close-mailbox menu item; use
	GTK_ICON_SIZE_BUTTON for notebook label close button.

2004-12-27 10:02  PeterB

	* libbalsa/files.c: do not bypass theme when mime-type and filename
	are both NULL.

2004-12-26 18:45  PeterB

	* libbalsa/body.c: g_mime_data_wrapper_write_to_stream() decodes
	the transfer-encoding--we must not.
	* libbalsa/files.c: look for themed mime-type icon.

2004-12-24  Pawel Salek

	* libbalsa/body.c: always call gdk_pixbuf_loader_close().
	* libbalsa/mailbox_pop3.c: do not try to move messages filtered
	out by procmail.

2004-12-22 13:25  Albrecht Dreß <albrecht.dress@arcor.de>

	* libbalsa/: body.c, mime.c: two minor gpg related fixes.

2004-12-20 12:33  PeterB

	* src/: balsa-index.c, balsa-index.h: re-implement
	balsa_index_{next,previous}_msgno.
	* src/message-window.c: save more menu items; use
	balsa_index_{next,previous}_msgno() to correctly manage menu item
	and button sensitivity.

2004-12-18  Pawel Salek

	* libbalsa/imap/imap-handle.c: forgive errors in BODYSTRUCTURE response
	(work around #160083).

2004-12-18  Craig Routledge
	
	* src/balsa-app.[ch]: add mw_action_after_move.
	* src/message-window.c: use it.
	* src/pref-manager.c: configure it.
	* src/save-restore.c: save/restore it.

2004-12-16 14:34  PeterB
