@@ -1,3 +1,7 @@
+2005-01-02  Pawel Salek <pawsa@theochem.kth.se>
+
+	* POTFILES.in: add libbalsa/files.c
+	
 2005-01-02  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
